@@ -1,4 +1,17 @@
 # Generated by Makefile. Do not edit.
+/alloc-size
+/alloc-size.exe
+/alloc-size.cpp
+/alloc-size-cpp
+/alloc-size-cpp.exe
+/alloc-size-cpp.o
+/alloc-size.obj
+/alloc-size.lib
+/alloc-size-cpp.obj
+/alloc-size-cpp.lib
+/alloc-size.o
+/alloc-size.map
+/alloc-size-cpp.map
 /array-param
 /array-param.exe
 /array-param.cpp
