@@ -2,6 +2,7 @@ Version 16
 ==========
 
 * New macros:
+  * HEDLEY_ALLOC_SIZE
   * HEDLEY_DIAGNOSTIC_DISABLE_EXTRA_SEMI
   * HEDLEY_DIAGNOSTIC_DISABLE_UNSAFE_BUFFER_USAGE
 * Assorted bug fixes and enhancements.
